fix form wrapping

--- a/assets/styles/home.styl
+++ b/assets/styles/home.styl
@@ -219,6 +219,10 @@
 
 	#comment-form
 		display inline-block
+		text-align center
+
+		&> *
+			display inline-block
 
 		input
 			transition background-color 0.3s
